added drag and drop in absence

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -132,7 +132,7 @@
     "Approved":"Zatwierdzony",
     "Rejected":"Odrzucony",
     "About configuration":"Informacje o konfiguracji",
-    "Add absence":"Dodaj absencje",
+    "Add absence":"Dodaj absencję",
     "Add task":"Dodaj zadanie",
     "Are you waiting? let's play a game":"Czekasz? zagraj w gre",
     "game": {
