commented game component from waiting room

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -240,7 +240,8 @@
       "There are no events in this range.": "There are no events in this range.",
       "More":"More",
       "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"That is, a system that improves management and communication between management, the customer, and those doing the work in the field.",
-      "Order a consultation":"Order a consultation"
+      "Order a consultation":"Order a consultation",
+      "Give your name for easy identification":"Give your name for easy identification"
     
     
   
