--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -240,7 +240,8 @@
       "There are no events in this range.": "Brak wydarzeń w tym zakresie.",
       "More": "Więcej",
       "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"System usprawniający zarządzanie oraz komunikację między kierownictwem, klientem, a osobami wykonującymi pracę w terenie.",
-      "Order a consultation":"Zamów bezpłatną konsultację"
+      "Order a consultation":"Zamów bezpłatną konsultację",
+      "Give your name for easy identification":"Przedstaw się w celu ułatwienia identyfikacji"
 
 
 
