--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -241,7 +241,8 @@
       "More":"More",
       "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"That is, a system that improves management and communication between management, the customer, and those doing the work in the field.",
       "Order a consultation":"Order a consultation",
-      "Give your name for easy identification":"Give your name for easy identification"
+      "Give your name for easy identification":"Give your name for easy identification",
+      "After adding your account to the configuration, log in again":"After adding your account to the configuration, log in again"
     
     
   
