--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -241,7 +241,8 @@
       "More": "Więcej",
       "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"System usprawniający zarządzanie oraz komunikację między kierownictwem, klientem, a osobami wykonującymi pracę w terenie.",
       "Order a consultation":"Zamów bezpłatną konsultację",
-      "Give your name for easy identification":"Przedstaw się w celu ułatwienia identyfikacji"
+      "Give your name for easy identification":"Przedstaw się w celu ułatwienia identyfikacji",
+      "After adding your account to the configuration, log in again":"Po dodaniu twojego konta do konfiguracji zaloguj się jeszcze raz"
 
 
 
