added location in worktime

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -242,7 +242,9 @@
       "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"That is, a system that improves management and communication between management, the customer, and those doing the work in the field.",
       "Order a consultation":"Order a consultation",
       "Give your name for easy identification":"Give your name for easy identification",
-      "After adding your account to the configuration, log in again":"After adding your account to the configuration, log in again"
+      "After adding your account to the configuration, log in again":"After adding your account to the configuration, log in again",
+      "Get Location":"Get Location",
+      "Location":"Location"
    
     
     
