--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -244,7 +244,9 @@
       "Give your name for easy identification":"Give your name for easy identification",
       "After adding your account to the configuration, log in again":"After adding your account to the configuration, log in again",
       "Get Location":"Get Location",
-      "Location":"Location"
+      "Location":"Location",
+      "More details about venue":"More details about venue",
+      "All venues on the map":"All venues on the map"
    
     
     
