--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -244,7 +244,9 @@
       "Give your name for easy identification":"Przedstaw się w celu ułatwienia identyfikacji",
       "After adding your account to the configuration, log in again":"Po dodaniu twojego konta do konfiguracji zaloguj się jeszcze raz",
       "Get Location":"Pobierz lokalizacje",
-      "Location":"Lokalizacja"
+      "Location":"Lokalizacja",
+      "More details about venue":"Więcej danych na temat miejsca",
+      "All venues on the map":"Wszystkie miejsca na mapie"
 
 
 
