--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -246,7 +246,8 @@
       "Get Location":"Pobierz lokalizacje",
       "Location":"Lokalizacja",
       "More details about venue":"Więcej danych na temat miejsca",
-      "All venues on the map":"Wszystkie miejsca na mapie"
+      "All venues on the map":"Wszystkie miejsca na mapie",
+      "Enter an address in the geolocation data form and add text information about the address in the description field.":"Wprowadź adres w formularzu danych geolokalizacyjnych, a w polu opis dodaj informacje tekstowe dotyczące tego adresu."
 
 
 
