added more details

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -245,7 +245,7 @@
       "After adding your account to the configuration, log in again":"After adding your account to the configuration, log in again",
       "Get Location":"Get Location",
       "Location":"Location",
-      "More details about venue":"More details about venue",
+      "More details":"More details",
       "All venues on the map":"All venues on the map",
       "Enter an address in the geolocation data form and add text information about the address in the description field.":"Enter an address in the geolocation data form and add text information about the address in the description field."
    
