--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -245,7 +245,7 @@
       "After adding your account to the configuration, log in again":"Po dodaniu twojego konta do konfiguracji zaloguj się jeszcze raz",
       "Get Location":"Pobierz lokalizacje",
       "Location":"Lokalizacja",
-      "More details about venue":"Więcej danych na temat miejsca",
+      "More details":"Więcej informacji",
       "All venues on the map":"Wszystkie miejsca na mapie",
       "Enter an address in the geolocation data form and add text information about the address in the description field.":"Wprowadź adres w formularzu danych geolokalizacyjnych, a w polu opis dodaj informacje tekstowe dotyczące tego adresu."
 
