added card in administration view

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -247,7 +247,8 @@
       "Location":"Location",
       "More details":"More details",
       "All venues on the map":"All venues on the map",
-      "Enter an address in the geolocation data form and add text information about the address in the description field.":"Enter an address in the geolocation data form and add text information about the address in the description field."
+      "Enter an address in the geolocation data form and add text information about the address in the description field.":"Enter an address in the geolocation data form and add text information about the address in the description field.",
+      "Search by Email":"Search by Email"
    
     
     
