some layout changes in waiting room

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -66,10 +66,10 @@
     "Name or company name":"Imię i nazwisko lub nazwa firmy",
     "Blocked":"Zablokowany",
     "Select Contractor":"Wybór kontrahenta",
-    "Copy the ID and deliver to your administrator to add you to the appropriate configuration":"Skopiuj ID oraz dostarcz do twojego administratora w celu dodania Cię do odpowiedniej konfiguracji",
+    "Copy the ID and deliver to your administrator to add you to the appropriate configuration":"Skopiuj swoje ID i przekaż je swojemu administratorowi, aby dodał cię do właściwej konfiguracji.",
     "Copy":"Kopiuj",
     "User ID":"User ID",
-    "Hi, your ID can be found below":"Cześć, twój identyfikator znajduje się poniżej",
+    "Hi, your ID can be found below":"Twój identyfikator znajduje się poniżej",
     "Contractor":"Kontrahent",
     "Search by name":"Wyszukaj po nazwie",
     "Search by number":"Wyszukaj po numerze",
