--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -248,7 +248,8 @@
       "More details":"Więcej informacji",
       "All venues on the map":"Wszystkie miejsca na mapie",
       "Enter an address in the geolocation data form and add text information about the address in the description field.":"Wprowadź adres w formularzu danych geolokalizacyjnych, a w polu opis dodaj informacje tekstowe dotyczące tego adresu.",
-      "Search by Email":"Szukaj po Email"
+      "Search by Email":"Szukaj po Email",
+      "Download":"Pobierz"
 
 
 
