added map tasks

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -249,7 +249,8 @@
       "All venues on the map":"Wszystkie miejsca na mapie",
       "Enter an address in the geolocation data form and add text information about the address in the description field.":"Wprowadź adres w formularzu danych geolokalizacyjnych, a w polu opis dodaj informacje tekstowe dotyczące tego adresu.",
       "Search by Email":"Szukaj po Email",
-      "Download":"Pobierz"
+      "Download":"Pobierz",
+      "Tasks on the map":"Zadania na mapie"
 
 
 
