--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -249,7 +249,8 @@
       "All venues on the map":"All venues on the map",
       "Enter an address in the geolocation data form and add text information about the address in the description field.":"Enter an address in the geolocation data form and add text information about the address in the description field.",
       "Search by Email":"Search by Email",
-      "Download":"Download"
+      "Download":"Download",
+      "Tasks on the map":"Tasks on the map"
    
     
     
