added new component

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -245,7 +245,8 @@
       "Enter an address in the geolocation data form and add text information about the address in the description field.":"Enter an address in the geolocation data form and add text information about the address in the description field.",
       "Search by Email":"Search by Email",
       "Download":"Download",
-      "Tasks on the map":"Tasks on the map"
+      "Tasks on the map":"Tasks on the map",
+      "Working time history":"Working time history"
    
     
     
