--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -245,7 +245,8 @@
       "Enter an address in the geolocation data form and add text information about the address in the description field.":"Wprowadź adres w formularzu danych geolokalizacyjnych, a w polu opis dodaj informacje tekstowe dotyczące tego adresu.",
       "Search by Email":"Szukaj po Email",
       "Download":"Pobierz",
-      "Tasks on the map":"Zadania na mapie"
+      "Tasks on the map":"Zadania na mapie",
+      "Working time history":"Historia czasu pracy"
 
 
 
