--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -1,37 +1,37 @@
 {
     "language": "мова",
-    "sign in": "увійти",
-    "sign up": "зареєструватися",
-    "sign in via magic link": "підключитися через магічний посилання",
-    "send magic link": "надіслати магічний посилання",
-    "enter your email": "введіть електронну адресу",
+    "sign in": "увійдіть",
+    "sign up": "зареєструйтесь",
+    "sign in via magic link": "увійдіть за допомогою магічного посилання",
+    "send magic link": "надіслати магічне посилання",
+    "enter your email": "введіть свою електронну пошту",
     "enter your password": "введіть пароль",
     "Sign in": "Увійти",
-    "Sign up": "Зареєструватися",
-    "Sign in via magic link": "Увійти через магічний посилання",
-    "Send magic link": "Надіслати магічний посилання",
-    "Enter your email": "Введіть електронну адресу",
+    "Sign up": "Зареєструйтесь",
+    "Sign in via magic link": "Увійти за допомогою магічного посилання",
+    "Send magic link": "Надіслати магічне посилання",
+    "Enter your email": "Введіть електронну пошту",
     "Enter your password": "Введіть пароль",
     "Successful registration": "Успішна реєстрація",
     "Enter correct data": "Введіть правильні дані",
-    "Logged successfully": "Успішно ввійшли",
-    "Enter a valid email address": "Введіть правильну адресу електронної пошти",
-    "Login successfully completed, check your mailbox": "Успішне завершення входу, перевірте свою поштову скриньку",
+    "Logged successfully": "Успішний вхід",
+    "Enter a valid email address": "Введіть дійсну адресу електронної пошти",
+    "Login successfully completed, check your mailbox": "Успішний вхід, перевірте свою поштову скриньку",
     "Profile": "Профіль",
     "Administration": "Адміністрація",
     "Venues": "Місця",
     "Schedule": "Розклад",
     "Tasks": "Завдання",
     "Reports": "Звіти",
-    "Home": "Головна сторінка",
+    "Home": "Додому",
     "Sign out": "Вийти",
     "Password change": "Зміна пароля",
     "New password": "Новий пароль",
-    "Submit": "Відправити",
+    "Submit": "Зберегти",
     "First and last name change": "Зміна імені та прізвища",
     "First and last name": "Ім'я та прізвище",
     "Updated!": "Оновлено!",
-    "The password must contain at least 6 characters": "Пароль повинен містити не менше 6 символів",
+    "The password must contain at least 6 characters": "Пароль повинен містити щонайменше 6 символів",
     "Users": "Користувачі",
     "License": "Ліцензія",
     "Settings": "Налаштування",
@@ -43,31 +43,195 @@
     "Unit": "Одиниця",
     "Add": "Додати",
     "Delete": "Видалити",
-    "Action": "Дії",
+    "Action": "Дія",
     "No users": "Немає користувачів",
     "Type": "Тип",
     "details": "деталі",
     "new": "новий",
-    "An error occurred while registering the user:": "Помилка під час реєстрації користувача:",
+    "An error occurred while registering the user:": "Під час реєстрації користувача сталася помилка:",
     "address": "адреса",
-    "phone number": "Номер телефону",
-    "profile type": "Тип профілю",
+    "phone number": "номер телефону",
+    "profile type": "тип профілю",
     "Register": "Зареєструватися",
     "description": "Опис",
-    "password": "Пароль",
+    "password": "пароль",
     "User edit": "Редагування користувача",
-    "Landing...": "Завантаження...",
-    "An error occurred while downloading data.": "Помилка під час завантаження даних.",
+    "Landing...": "Земля...",
+    "An error occurred while downloading data.": "Під час завантаження даних сталася помилка.",
     "Your license is valid until:": "Ваша ліцензія дійсна до:",
     "Contractors": "Контрагенти",
     "contact person": "контактна особа",
-    "National Economy Register ID": "Номер запису в Єдиному державному реєстрі підприємств та організацій України (ЄДРПОУ)",
-    "Tax ID": "Ідентифікаційний код платника податків",
-    "Name or company name": "Ім'я та прізвище або назва компанії",
-    "Blocked": "Заблокований",
-    "Select Contractor": "Вибрати контрагента",
-    "Copy the ID and deliver to your administrator to add you to the appropriate configuration": "Скопіюйте ID і передайте своєму адміністратору, щоб додати вас до відповідної конфігурації",
+    "National Economy Register ID": "РЕГОН",
+    "Tax ID": "Податковий ідентифікаційний номер",
+    "Name or company name": "Ім'я або назва компанії",
+    "Blocked": "Заблоковано",
+    "Select Contractor": "Виберіть контрагента",
+    "Copy the ID and deliver to your administrator to add you to the appropriate configuration": "Скопіюйте ідентифікатор і передайте його адміністратору для додавання вас до відповідної конфігурації",
     "Copy": "Копіювати",
-    "User ID": "Ідентифікатор користувача"
-
+    "User ID": "Ідентифікатор користувача",
+    "Hi, your ID can be found below": "Привіт, ваш ідентифікатор можна знайти нижче",
+    "Contractor": "Контрагент",
+    "Search by name": "Пошук за іменем",
+    "Search by number": "Пошук за номером",
+    "Search by contractor": "Пошук за контрагентом",
+    "name": "назва",
+    "Add venue": "Додати місце",
+    "Update venue": "Оновити місце",
+    "Open Tasks": "Відкриті завдання",
+    "Closed Tasks": "Закриті завдання",
+    "Basic data": "Основні дані",
+    "Venue": "Місце",
+    "Working time": "Робочий час",
+    "status": "стан",
+    "Open": "Відкрити",
+    "In progress": "У процесі",
+    "Completed": "Завершено",
+    "Select Assigned user": "Виберіть призначеного користувача",
+    "Creation date": "Дата створення",
+    "Start of implementation": "Початок виконання",
+    "Deadline": "Планована дата виконання",
+    "Settled": "Розраховано",
+    "Task": "Завдання",
+    "Address": "Адреса",
+    "Select Venue": "Виберіть місце",
+    "Open in Google Maps": "Відкрити в Google Maps",
+    "Estimated time": "Оцінений час",
+    "Status": "Статус",
+    "Select service from dictionary": "Виберіть послугу зі словника",
+    "Total": "Загальний",
+    "Quantity": "Кількість",
+    "Summary": "Загальна інформація",
+    "No work time": "Відсутність робочого часу",
+    "Date": "Дата",
+    "Time": "Час",
+    "Vacation": "Відпустка",
+    "Sick leave": "Лікарняний лист",
+    "Legend": "Легенда",
+    "Task type": "Тип завдання",
+    "Status of the implementation of issues in the last 30 days": "Стан виконання завдань за останні 30 днів",
+    "Open Filter": "Відкрити фільтр",
+    "Filter Venues": "Фільтр місць",
+    "Filter Tasks": "Фільтр завдань",
+    "Apply Filters": "Застосувати фільтри",
+    "Your open and in progress tasks": "Ваші відкриті та у процесі завдання",
+    "License expired": "Ліцензія закінчилася",
+    "Back to home page": "Повернутися на головну сторінку",
+    "Select User": "Виберіть користувача",
+    "All users": "Усі користувачі",
+    "Absences": "Відсутність",
+    "Contractor edit": "Редагування контрагента",
+    "Closed": "Закрито",
+    "User": "Користувач",
+    "Absence": "Відсутність",
+    "Start date": "Дата початку",
+    "End date": "Дата закінчення",
+    "Add new user": "Додати нового користувача",
+    "Manager": "Менеджер",
+    "Client": "Клієнт",
+    "Worker": "Робітник",
+    "Approved": "Схвалено",
+    "Rejected": "Відхилено",
+    "About configuration": "Про конфігурацію",
+    "Add absence": "Додати відсутність",
+    "Add task": "Додати завдання",
+    "Incorrect dates": "Неправильні дати",
+    "Date from : ": "Дата від: ",
+    "Date to : ": "Дата до: ",
+    "Report realization of issues for the customers [only completed]": "Звіт про виконання завдань для клієнтів [тільки завершені]",
+    "Amount of tasks": "Кількість завдань",
+    "Language": "Мова",
+    "Search by User": "Пошук за користувачем",
+    "History": "Історія",
+    "Venues details": "Деталі місць",
+    "End Date": "Дата закінчення",
+    "Start Date": "Дата початку",
+    "Active": "Активний",
+    "Archived": "Архівовано",
+    "Yes": "Так",
+    "No": "Ні",
+    "Cancelled": "Скасовано",
+    "Map": "Карта",
+    "Tasks history": "Історія завдань",
+    "Details": "Деталі",
+    "Cancel": "Скасувати",
+    "Change Status": "Змінити статус",
+    "Changing the status of the task to complete will not allow you to edit it later.": "Зміна статусу завдання на Завершено не дозволить вам пізніше редагувати його.",
+    "Do you want to copy this venue?": "Чи бажаєте скопіювати це місце?",
+    "Do you want to copy this task?": "Чи бажаєте скопіювати це завдання?",
+    "Select Language": "Вибрати мову",
+    "All services": "Усі послуги",
+    "Venue ID": "Ідентифікатор місця",
+    "All Tasks": "Усі завдання",
+    "Author": "Автор",
+    "Task names": "Назви завдань",
+    "Dictionaries": "Словники",
+    "New Task": "Нове завдання",
+    "Contact": "Контакт",
+    "Profile type": "Тип профілю",
+    "Phone number": "Номер телефону",
+    "Open tasks": "Відкриті завдання",
+    "Have questions or suggestions about our software? Contact the Task Venue team in any convenient way.": "Є питання або пропозиції щодо нашого програмного забезпечення? Зв'яжіться з командою Task Venue будь-яким зручним способом.",
+    "Read more on the official website": "Читайте більше на офіційному веб-сайті",
+    "Copyright © 2023 Task Venue - all rights reserved.": "Авторське право © 2023 Task Venue - всі права захищені.",
+    "About us": "Про нас",
+    "App": "Додаток",
+    "Knowledge": "Знання",
+    "Technology": "Технологія",
+"I can't remember my password": "Я не можу вспомнити свій пароль",
+"A place for your business": "Місце для вашого бізнесу",
+"Learn more": "Дізнайтеся більше",
+"Task Venue simplicity and efficiency in every detail": "Task Venue простота і ефективність в кожному деталі",
+"The use of the Task Venue system has a positive impact on building customer relationships, which in turn increases the dynamics of the final profit.": "Використання системи Task Venue має позитивний вплив на побудову відносин з клієнтами, що в свою чергу збільшує динаміку кінцевого прибутку.",
+"Results after implementing Task Venue software:": "Результати після впровадження програмного забезпечення Task Venue:",
+"Inspection": "Інспекція",
+"Customer loyalty": "Лояльність клієнтів",
+"Income growth": "Зростання прибутку",
+"Optimization": "Оптимізація",
+"Electronic reporting simplifies control of all business processes": "Електронне звітування спрощує контроль за всіма бізнес-процесами",
+"Improved service extends customer life cycle": "Покращений сервіс продовжує життєвий цикл клієнта",
+"Operating costs decrease, increasing income": "Операційні витрати зменшуються, збільшуючи прибуток",
+"Detailed analysis of the company's profit and the profitability of each place served": "Детальний аналіз прибутку компанії та рентабельності кожного обслуговуваного місця",
+"Don’t have an account?": "У вас немає облікового запису?",
+"Get started": "Почніть",
+"Employee time report": "Звіт про робочий час співробітника",
+"Based in Cracow": "Заснований у Кракові",
+"Poland": "Польща",
+"Send": "Відіслати",
+"Display": "Показати",
+"Invoices": "Рахунки",
+"Documents": "Документи",
+"Contracts": "Угоди",
+"Others": "Інше",
+"File Name": "Назва файлу",
+"Actions": "Дії",
+"Attachments": "Вкладення",
+"Delete File": "Видалити файл",
+"Are you sure you want to delete this file?": "Ви впевнені, що хочете видалити цей файл?",
+"Event": "Подія",
+"All Day": "Весь день",
+"Week": "Тиждень",
+"Work Week": "Робочий тиждень",
+"Day": "День",
+"Month": "Місяць",
+"Back": "Назад",
+"Next": "Наступний",
+"Yesterday": "Вчора",
+"Tomorrow": "Завтра",
+"Today": "Сьогодні",
+"Agenda": "Порядок денний",
+"There are no events in this range.": "В цьому діапазоні подій немає.",
+"More": "Більше",
+"That is, a system that improves management and communication between management, the customer, and those doing the work in the field.": "Це система, яка покращує управління та комунікацію між керівництвом, клієнтом і тими, хто працює в полі.",
+"Order a consultation": "Замовити консультацію",
+"Give your name for easy identification": "Вкажіть своє ім'я для полегшення ідентифікації",
+"After adding your account to the configuration, log in again": "Після додавання вашого облікового запису до конфігурації увійдіть ще раз",
+"Get Location": "Отримати місцезнаходження",
+"Location": "Місцезнаходження",
+"More details": "Докладніше",
+"All venues on the map": "Усі місця на мапі",
+"Enter an address in the geolocation data form and add text information about the address in the description field.": "Введіть адресу в формі геолокаційних даних і додайте текстову інформацію про адресу в поле опису.",
+"Search by Email": "Пошук за Email",
+"Download": "Завантажити",
+"Tasks on the map": "Завдання на мапі",
+"Working time history": "Історія робочого часу"
 }  
