--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -2,12 +2,18 @@
   "language": "Sprache",
   "sign in": "Anmelden",
   "sign up": "Registrieren",
-  "sign in via magic link": "Anmelden über den Magic-Link",
-  "send magic link": "Magic-Link senden",
+  "sign in via magic link": "Anmelden über den magischen Link",
+  "send magic link": "Magischen Link senden",
   "enter your email": "Geben Sie Ihre E-Mail-Adresse ein",
   "enter your password": "Geben Sie Ihr Passwort ein",
+  "Sign in": "Anmelden",
+  "Sign up": "Registrieren",
+  "Sign in via magic link": "Anmelden über den magischen Link",
+  "Send magic link": "Magischen Link senden",
+  "Enter your email": "Geben Sie Ihre E-Mail-Adresse ein",
+  "Enter your password": "Geben Sie Ihr Passwort ein",
   "Successful registration": "Erfolgreiche Registrierung",
-  "Enter correct data": "Geben Sie die richtigen Daten ein",
+  "Enter correct data": "Geben Sie korrekte Daten ein",
   "Logged successfully": "Erfolgreich angemeldet",
   "Enter a valid email address": "Geben Sie eine gültige E-Mail-Adresse ein",
   "Login successfully completed, check your mailbox": "Anmeldung erfolgreich abgeschlossen, überprüfen Sie Ihr Postfach",
@@ -23,14 +29,14 @@
   "New password": "Neues Passwort",
   "Submit": "Absenden",
   "First and last name change": "Vor- und Nachnamen ändern",
-  "First and last name": "Vorname und Nachname",
+  "First and last name": "Vor- und Nachname",
   "Updated!": "Aktualisiert!",
   "The password must contain at least 6 characters": "Das Passwort muss mindestens 6 Zeichen enthalten",
   "Users": "Benutzer",
   "License": "Lizenz",
   "Settings": "Einstellungen",
-  "Services": "Dienste",
-  "No services": "Keine Dienste",
+  "Services": "Dienstleistungen",
+  "No services": "Keine Dienstleistungen",
   "Name": "Name",
   "Description": "Beschreibung",
   "Cost": "Kosten",
@@ -41,8 +47,8 @@
   "No users": "Keine Benutzer",
   "Type": "Typ",
   "details": "Details",
-  "new": "Neu",
-  "An error occurred while registering the user:": "Es ist ein Fehler bei der Benutzerregistrierung aufgetreten:",
+  "new": "neu",
+  "An error occurred while registering the user:": "Beim Registrieren des Benutzers ist ein Fehler aufgetreten:",
   "address": "Adresse",
   "phone number": "Telefonnummer",
   "profile type": "Profiltyp",
@@ -50,12 +56,12 @@
   "description": "Beschreibung",
   "password": "Passwort",
   "User edit": "Benutzer bearbeiten",
-  "Landing...": "Ladevorgang...",
+  "Landing...": "Laden...",
   "An error occurred while downloading data.": "Beim Herunterladen der Daten ist ein Fehler aufgetreten.",
   "Your license is valid until:": "Ihre Lizenz ist gültig bis:",
   "Contractors": "Auftragnehmer",
   "contact person": "Kontaktperson",
-  "National Economy Register ID": "Wirtschaftsregisternummer",
+  "National Economy Register ID": "Wirtschafts-Identifikationsnummer",
   "Tax ID": "Steuernummer",
   "Name or company name": "Name oder Firmenname",
   "Blocked": "Gesperrt",
@@ -65,7 +71,7 @@
   "User ID": "Benutzer-ID",
   "Hi, your ID can be found below": "Hallo, Ihre ID finden Sie unten",
   "Contractor": "Auftragnehmer",
-  "Search by name": "Nach Name suchen",
+  "Search by name": "Nach Namen suchen",
   "Search by number": "Nach Nummer suchen",
   "Search by contractor": "Nach Auftragnehmer suchen",
   "name": "Name",
@@ -91,7 +97,7 @@
   "Open in Google Maps": "In Google Maps öffnen",
   "Estimated time": "Geschätzte Zeit",
   "Status": "Status",
-  "Select service from dictionary": "Dienst aus dem Wörterbuch auswählen",
+  "Select service from dictionary": "Dienstleistung aus dem Wörterbuch auswählen",
   "Total": "Gesamt",
   "Quantity": "Menge",
   "Summary": "Zusammenfassung",
@@ -99,9 +105,9 @@
   "Date": "Datum",
   "Time": "Uhrzeit",
   "Vacation": "Urlaub",
-  "Sick leave": "Krankmeldung",
+  "Sick leave": "Krankenurlaub",
   "Legend": "Legende",
-  "Task type": "Aufgabenart",
+  "Task type": "Aufgabentyp",
   "Status of the implementation of issues in the last 30 days": "Status der Umsetzung von Aufgaben in den letzten 30 Tagen",
   "Open Filter": "Filter öffnen",
   "Filter Venues": "Veranstaltungsorte filtern",
@@ -114,7 +120,7 @@
   "All users": "Alle Benutzer",
   "Absences": "Abwesenheiten",
   "Contractor edit": "Auftragnehmer bearbeiten",
-  "Closed": "Abgeschlossen",
+  "Closed": "Geschlossen",
   "User": "Benutzer",
   "Absence": "Abwesenheit",
   "Start date": "Startdatum",
@@ -122,27 +128,16 @@
   "Add new user": "Neuen Benutzer hinzufügen",
   "Manager": "Manager",
   "Client": "Kunde",
-  "Worker": "Mitarbeiter",
+  "Worker": "Arbeiter",
   "Approved": "Genehmigt",
   "Rejected": "Abgelehnt",
   "About configuration": "Über die Konfiguration",
   "Add absence": "Abwesenheit hinzufügen",
   "Add task": "Aufgabe hinzufügen",
-  "Are you waiting? let's play a game": "Warten Sie? Lass uns ein Spiel spielen",
-  "game": {
-      "rock": "Stein",
-      "paper": "Papier",
-      "scissors": "Schere",
-      "playerChoice": "Ihre Wahl: {{choice}}",
-      "computerChoice": "Computerwahl: {{choice}}",
-      "tie": "Unentschieden!",
-      "playerWins": "Sie haben gewonnen!",
-      "computerWins": "Der Computer hat gewonnen."
-  },
   "Incorrect dates": "Falsche Daten",
-  "Date from : ": "Datum von: ",
-  "Date to : ": "Datum bis: ",
-  "Report realization of issues for the customers [only completed]": "Bericht über die Umsetzung von Aufgaben für Kunden [nur abgeschlossen]",
+  "Date from : ": "Datum von : ",
+  "Date to : ": "Datum bis : ",
+  "Report realization of issues for the customers [only completed]": "Bericht über die Umsetzung von Aufgaben für Kunden [nur abgeschlossene]",
   "Amount of tasks": "Anzahl der Aufgaben",
   "Language": "Sprache",
   "Search by User": "Nach Benutzer suchen",
@@ -160,19 +155,83 @@
   "Details": "Details",
   "Cancel": "Abbrechen",
   "Change Status": "Status ändern",
-  "Changing the status of the task to complete will not allow you to edit it later.": "Wenn Sie den Status der Aufgabe auf abgeschlossen ändern, können Sie ihn später nicht mehr bearbeiten.",
+  "Changing the status of the task to complete will not allow you to edit it later.": "Die Änderung des Status der Aufgabe auf 'Abgeschlossen' wird Ihnen später keine Bearbeitung ermöglichen.",
   "Do you want to copy this venue?": "Möchten Sie diesen Veranstaltungsort kopieren?",
   "Do you want to copy this task?": "Möchten Sie diese Aufgabe kopieren?",
   "Select Language": "Sprache auswählen",
-  "All services": "Alle Dienste",
+  "All services": "Alle Dienstleistungen",
   "Venue ID": "Veranstaltungsort-ID",
   "All Tasks": "Alle Aufgaben",
   "Author": "Autor",
-  "Task names": "Aufgabenbezeichnungen",
+  "Task names": "Aufgabennamen",
   "Dictionaries": "Wörterbücher",
   "New Task": "Neue Aufgabe",
   "Contact": "Kontakt",
   "Profile type": "Profiltyp",
   "Phone number": "Telefonnummer",
-  "Open tasks": "Offene Aufgaben"
+  "Open tasks": "Offene Aufgaben",
+  "Have questions or suggestions about our software? Contact the Task Venue team in any convenient way.": "Haben Sie Fragen oder Vorschläge zu unserer Software? Kontaktieren Sie das Task Venue-Team auf bequeme Weise.",
+  "Read more on the official website": "Lesen Sie mehr auf der offiziellen Website",
+  "Copyright © 2023 Task Venue - all rights reserved.": "Urheberrecht © 2023 Task Venue - alle Rechte vorbehalten",
+  "About us": "Über uns",
+  "App": "Anwendung",
+  "Knowledge": "Wissen",
+  "Technology": "Technologie",
+  "I can't remember my password": "Ich kann mich nicht an mein Passwort erinnern",
+  "A place for your business": "Ein Ort für Ihr Unternehmen",
+  "Learn more": "Mehr erfahren",
+  "Task Venue simplicity and efficiency in every detail": "Task Venue - Einfachheit und Effizienz in jedem Detail",
+  "The use of the Task Venue system has a positive impact on building customer relationships, which in turn increases the dynamics of the final profit.": "Die Verwendung des Task Venue-Systems hat einen positiven Einfluss auf den Aufbau von Kundenbeziehungen, was wiederum die Dynamik des Endgewinns erhöht.",
+  "Results after implementing Task Venue software:": "Ergebnisse nach der Implementierung der Task Venue-Software:",
+  "Inspection": "Inspektion",
+  "Customer loyalty": "Kundenloyalität",
+  "Income growth": "Einkommenswachstum",
+  "Optimization": "Optimierung",
+  "Electronic reporting simplifies control of all business processes": "Elektronisches Berichtswesen erleichtert die Kontrolle aller Geschäftsprozesse",
+  "Improved service extends customer life cycle": "Verbesserter Service verlängert den Kundenlebenszyklus",
+  "Operating costs decrease, increasing income": "Betriebskosten sinken, Einkommen steigt",
+  "Detailed analysis of the company's profit and the profitability of each place served": "Detaillierte Analyse des Unternehmensgewinns und der Rentabilität jedes bedienten Ortes",
+  "Don’t have an account?": "Haben Sie noch kein Konto?",
+  "Get started": "Loslegen",
+  "Employee time report": "Mitarbeiter-Zeitbericht",
+  "Based in Cracow": "Mit Sitz in Krakau",
+  "Poland": "Polen",
+  "Send": "Senden",
+  "Display": "Anzeigen",
+  "Invoices": "Rechnungen",
+  "Documents": "Dokumente",
+  "Contracts": "Verträge",
+  "Others": "Sonstiges",
+  "File Name": "Dateiname",
+  "Actions": "Aktionen",
+  "Attachments": "Anhänge",
+  "Delete File": "Datei löschen",
+  "Are you sure you want to delete this file?": "Sind Sie sicher, dass Sie diese Datei löschen möchten?",
+  "Event": "Ereignis",
+  "All Day": "Ganztägig",
+  "Week": "Woche",
+  "Work Week": "Arbeitswoche",
+  "Day": "Tag",
+  "Month": "Monat",
+  "Back": "Zurück",
+  "Next": "Nächster",
+  "Yesterday": "Gestern",
+  "Tomorrow": "Morgen",
+  "Today": "Heute",
+  "Agenda": "Agenda",
+  "There are no events in this range.": "Es gibt keine Ereignisse in diesem Bereich.",
+  "More": "Mehr",
+  "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.": "Das heißt, ein System, das das Management und die Kommunikation zwischen der Geschäftsleitung, dem Kunden und den Mitarbeitern vor Ort verbessert.",
+  "Order a consultation": "Eine Beratung bestellen",
+  "Give your name for easy identification": "Geben Sie Ihren Namen zur einfachen Identifikation an",
+  "After adding your account to the configuration, log in again": "Nachdem Sie Ihr Konto zur Konfiguration hinzugefügt haben, melden Sie sich erneut an",
+  "Get Location": "Standort erhalten",
+  "Location": "Standort",
+  "More details": "Weitere Details",
+  "All venues on the map": "Alle Veranstaltungsorte auf der Karte",
+  "Enter an address in the geolocation data form and add text information about the address in the description field.": "Geben Sie eine Adresse in das Geolokalisierungsdatenformular ein und fügen Sie Textinformationen zur Adresse im Beschreibungsfeld hinzu.",
+  "Search by Email": "Nach E-Mail suchen",
+  "Download": "Herunterladen",
+  "Tasks on the map": "Aufgaben auf der Karte",
+  "Working time history": "Arbeitszeitverlauf"
 }
