--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -239,7 +239,8 @@
       "Stop":"Stop",
       "Do you want to change the status of the task to closed?":"Do you want to change the status of the task to closed?",
       "The functionality works correctly only with geolocation enabled in your browser. If you want to make use of the full features, please turn on your location services.":      "The functionality works correctly only with geolocation enabled in your browser. If you want to make use of the full features, please turn on your location services.",
-      "Geolocation is not supported by your browser":"Geolocation is not supported by your browser"
+      "Geolocation is not supported by your browser":"Geolocation is not supported by your browser",
+      "Invalid geolocation data":"Invalid geolocation data"
 
    
     
