--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -240,7 +240,21 @@
       "Do you want to change the status of the task to closed?":"Do you want to change the status of the task to closed?",
       "The functionality works correctly only with geolocation enabled in your browser. If you want to make use of the full features, please turn on your location services.":      "The functionality works correctly only with geolocation enabled in your browser. If you want to make use of the full features, please turn on your location services.",
       "Geolocation is not supported by your browser":"Geolocation is not supported by your browser",
-      "Invalid geolocation data":"Invalid geolocation data"
+      "Invalid geolocation data":"Invalid geolocation data",
+      "Create a new organization configuration":"Create a new organization configuration",
+      "Last step":"Last step",
+      "Name of the organization":"Name of the organization",
+      "Continue":"Continue",
+      "Finish":"Finish",
+      "Your trial period is valid until":"Your trial period is valid until",
+      "Name the organization":"Name the organization",
+      "Free trial period":"Free trial period",
+      "Congratulations":"Congratulations",
+      "Provide the name of your company, facility or organization so that we can better tailor our services to your needs":"Provide the name of your company, facility or organization so that we can better tailor our services to your needs",
+      "The trial period lasts 30 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.":"The trial period lasts 30 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.",
+      "You have successfully created the configuration. Clicking the button below will take you to the system.":"You have successfully created the configuration. Clicking the button below will take you to the system."
+
+
 
    
     
