added terms and condition pages

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -252,7 +252,8 @@
       "Congratulations":"Gratuluje",
       "Provide the name of your company, facility or organization so that we can better tailor our services to your needs":"Podaj nazwę firmy, zakładu lub organizacji, abyśmy mogli lepiej dostosować nasze usługi do Twoich potrzeb",
       "The trial period lasts 7 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.":"Okres próbny trwa 7 dni i jest całkowicie darmowy. Dzięki niemu możesz korzystać ze wszystkich funkcji systemu TaskVenue, co pozwala na zarządzanie firmą i dodawanie pracowników do swojej konfiguracji.",
-      "You have successfully created the configuration. Clicking the button below will take you to the system.":"Udało się utworzyć konfigurację. Klikając przycisk poniżej, zostaniesz przeniesiony do systemu."
+      "You have successfully created the configuration. Clicking the button below will take you to the system.":"Udało się utworzyć konfigurację. Klikając przycisk poniżej, zostaniesz przeniesiony do systemu.",
+      "Terms and conditions":"Regulamin"
 
 
 
