added checbox with accept terms and conditions

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -253,7 +253,8 @@
       "Provide the name of your company, facility or organization so that we can better tailor our services to your needs":"Provide the name of your company, facility or organization so that we can better tailor our services to your needs",
       "The trial period lasts 7 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.":"The trial period lasts 7 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.",
       "You have successfully created the configuration. Clicking the button below will take you to the system.":"You have successfully created the configuration. Clicking the button below will take you to the system.",
-      "Terms and conditions":"Terms and conditions"
+      "Terms and conditions":"Terms and conditions",
+      "I agree to the terms and conditions":"I agree to the terms and conditions"
 
 
 
