added info about cookies

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -233,5 +233,9 @@
   "Search by Email": "Nach E-Mail suchen",
   "Download": "Herunterladen",
   "Tasks on the map": "Aufgaben auf der Karte",
-  "Working time history": "Arbeitszeitverlauf"
+  "Working time history": "Arbeitszeitverlauf",
+  "Accept":"Akzeptieren",
+  "This site uses cookies":"Diese Website verwendet Cookies",
+  "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Durch die Nutzung entsprechend Ihrer aktuellen Browsereinstellungen stimmen Sie deren Verwendung zu. Weitere Informationen zu Cookies und Datenschutz finden Sie in den Allgemeinen Geschäftsbedingungen."
+
 }
