--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -254,7 +254,10 @@
       "The trial period lasts 7 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.":"Okres próbny trwa 7 dni i jest całkowicie darmowy. Dzięki niemu możesz korzystać ze wszystkich funkcji systemu TaskVenue, co pozwala na zarządzanie firmą i dodawanie pracowników do swojej konfiguracji.",
       "You have successfully created the configuration. Clicking the button below will take you to the system.":"Udało się utworzyć konfigurację. Klikając przycisk poniżej, zostaniesz przeniesiony do systemu.",
       "Terms and conditions":"Regulamin",
-      "I agree to the terms and conditions":"Akceptuję regulamin korzystania z serwisu"
+      "I agree to the terms and conditions":"Akceptuję regulamin korzystania z serwisu",
+      "Accept":"Akceptuj",
+      "This site uses cookies":"Ta strona używa plików cookie",
+      "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Korzystając z niej zgodnie z aktualnymi ustawieniami przeglądarki, zgadzasz się na ich używanie. Więcej informacji na temat plików cookie oraz ochrony prywatności znajdziesz w Regulaminie."
 
 
 
