--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -254,7 +254,11 @@
 "The trial period lasts 7 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.": "Пробний період триває 7 днів і є повністю безкоштовним. Він дозволяє вам використовувати всі функції системи TaskVenue, що дозволяє керувати вашою компанією та додавати працівників до вашої конфігурації.",
 "You have successfully created the configuration. Clicking the button below will take you to the system.": "Ви успішно створили конфігурацію. Натискання кнопки внизу перенесе вас до системи.",
 "Terms and conditions": "Умови та положення",
-"I agree to the terms and conditions": "Я погоджуюсь з умовами та положеннями"
+"I agree to the terms and conditions": "Я погоджуюсь з умовами та положеннями",
+"Accept":"Прийняти",
+"This site uses cookies":"Цей сайт використовує файли cookie",
+"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Використовуючи його відповідно до поточних налаштувань браузера, ви погоджуєтеся з їх використанням. Для отримання додаткової інформації щодо файлів cookie та конфіденційності див. Умови та положення."
+
 
 
 
