--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -254,8 +254,10 @@
       "The trial period lasts 7 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.":"The trial period lasts 7 days and is completely free. It allows you to use all the features of the TaskVenue system, allowing you to manage your company and add employees to your setup.",
       "You have successfully created the configuration. Clicking the button below will take you to the system.":"You have successfully created the configuration. Clicking the button below will take you to the system.",
       "Terms and conditions":"Terms and conditions",
-      "I agree to the terms and conditions":"I agree to the terms and conditions"
-
+      "I agree to the terms and conditions":"I agree to the terms and conditions",
+      "Accept":"Accept",
+      "This site uses cookies":"This site uses cookies",
+      "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions."
 
 
    
