hidden some element in page

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -257,7 +257,8 @@
       "I agree to the terms and conditions":"I agree to the terms and conditions",
       "Accept":"Accept",
       "This site uses cookies":"This site uses cookies",
-      "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions."
+      "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.",
+      "Try it for free":"Wypróbuj za darmo"
 
 
    
