--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -257,7 +257,8 @@
       "I agree to the terms and conditions":"Akceptuję regulamin korzystania z serwisu",
       "Accept":"Akceptuj",
       "This site uses cookies":"Ta strona używa plików cookie",
-      "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Korzystając z niej zgodnie z aktualnymi ustawieniami przeglądarki, zgadzasz się na ich używanie. Więcej informacji na temat plików cookie oraz ochrony prywatności znajdziesz w Regulaminie."
+      "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Korzystając z niej zgodnie z aktualnymi ustawieniami przeglądarki, zgadzasz się na ich używanie. Więcej informacji na temat plików cookie oraz ochrony prywatności znajdziesz w Regulaminie.",
+      "Try it for free":"Wypróbuj za darmo"
 
 
 
