--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -258,7 +258,8 @@
       "Accept":"Accept",
       "This site uses cookies":"This site uses cookies",
       "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.",
-      "Try it for free":"Wypróbuj za darmo"
+      "Try it for free":"Wypróbuj za darmo",
+      "Check us out on Youtube":"Check us out on Youtube"
 
 
    
