--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -258,7 +258,8 @@
       "Accept":"Akceptuj",
       "This site uses cookies":"Ta strona używa plików cookie",
       "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Korzystając z niej zgodnie z aktualnymi ustawieniami przeglądarki, zgadzasz się na ich używanie. Więcej informacji na temat plików cookie oraz ochrony prywatności znajdziesz w Regulaminie.",
-      "Try it for free":"Wypróbuj za darmo"
+      "Try it for free":"Wypróbuj za darmo",
+      "Check us out on Youtube":"Sprawdź nas na Youtube"
 
 
 
