--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -259,7 +259,9 @@
       "This site uses cookies":"This site uses cookies",
       "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.",
       "Try it for free":"Wypróbuj za darmo",
-      "Check us out on Youtube":"Check us out on Youtube"
+      "Check us out on Youtube":"Check us out on Youtube",
+      "New task in TaskVenue":"New task in TaskVenue",
+      "A new task in which you are tagged has been registered. Check the details at https://taskvenue.com":"A new task in which you are tagged has been registered. Check the details at https://taskvenue.com"
 
 
    
